testsuite/tests/ghc-regress/indexed-types/should_fail/OverC.hs
{-# OPTIONS -findexed-types #-}

module OverC
where
import OverA (C)

data instance C [a] [Int] = C9ListList
